--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<link rel="stylesheet" type="text/css" href="css/jukebox.css">
+<link rel="stylesheet" type="text/css" href="css/rallye.css">
 </head>
 
 <body>
